--- a/regex.ipynb
+++ b/regex.ipynb
@@ -29,10 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The python word is located in position: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "txt = \"python\"\n",
+    "x = re.search(\"python\", txt)\n",
+    "print(\"The python word is located in position:\", x.start())"
+   ]
   },
   {
    "cell_type": "code",
