--- a/regex.ipynb
+++ b/regex.ipynb
@@ -49,10 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'is', 'good']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "txt = \"python is good\"\n",
+    "x = re.split(\"\\s\", txt)\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "code",
