--- a/regex.ipynb
+++ b/regex.ipynb
@@ -69,10 +69,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'good']\n",
+      "yes, there is at least one match!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re \n",
+    "txt = \"python is good\"\n",
+    "x = re.findall(\"python|good\", txt)\n",
+    "print(x)\n",
+    "if x:\n",
+    "    print(\"yes, there is at least one match!\")\n",
+    "else:\n",
+    "    print(\"no match\")"
+   ]
   },
   {
    "cell_type": "code",
