--- a/regex.ipynb
+++ b/regex.ipynb
@@ -94,10 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "no match\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re \n",
+    "txt = \"python is good\"\n",
+    "x = re.findall(\"\\d\", txt)\n",
+    "print(x)\n",
+    "if x:\n",
+    "    print(\"yes, there is a match\")\n",
+    "else:\n",
+    "    print(\"no match\")"
+   ]
   },
   {
    "cell_type": "code",
