numpy practice questions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,24 @@
     "print(\"array elements:\", a)\n",
     "a*=3\n",
     "print(\"new array elements:\", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Program to check numpy version\n",
+    "print(np.__version__)"
    ]
   },
   {
