numpy practice questions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -75,6 +75,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original List:  [12.23, 13.32, 100, 36.32] \n",
+      "One-dimensional Numpy array:  [ 12.23  13.32 100.    36.32]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a NumPy program to convert a list of numeric values into a one-dimensional NumPy array.\n",
+    "Original_List = [12.23, 13.32, 100, 36.32]\n",
+    "OneDimensional_List = np.array(Original_List)\n",
+    "print(\"Original List: \", Original_List,\"\\nOne-dimensional Numpy array: \", OneDimensional_List)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
