numpy practice questions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -96,6 +96,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  3  4]\n",
+      " [ 5  6  7]\n",
+      " [ 8  9 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a NumPy program to create a 3x3 matrix with values ranging from 2 to 10.\n",
+    "matrix_list = [[2,3,4],[5,6,7],[8,9,10]]\n",
+    "matrix = np.array(matrix_list)\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
