numpy practice questions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -118,6 +118,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[ 0.  0.  0.  0.  0.  0. 11.  0.  0.  0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a NumPy program to create a null vector of size 10 and update the sixth value to 11.\n",
+    "arr = np.zeros(10)\n",
+    "print(arr)\n",
+    "arr[6] = 11\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
