--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -140,6 +140,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35\n",
+      " 36 37]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a NumPy program to create an array with values ranging from 12 to 38.\n",
+    "arr = np.arange(12, 38)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
