numpy practice questions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -160,6 +160,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35\n",
+      " 36 37]\n",
+      "Reverse:  [37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14\n",
+      " 13 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a NumPy program to reverse an array (the first element becomes the last).\n",
+    "arr = np.arange(12, 38)\n",
+    "print(arr)\n",
+    "print(\"Reverse: \", arr[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
