numpy practice questions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -183,6 +183,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3. 4. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a NumPy program to convert an array to a floating type.\n",
+    "int_arr = np.array([1, 2, 3, 4, 5])\n",
+    "float_arr = int_arr.astype(float)\n",
+    "print(float_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
