numpy practice questions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -227,6 +227,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a NumPy program to add a border (filled with 0's) around an existing array.\n",
+    "x = np.zeros((5, 5))\n",
+    "x[1:-1, 1:-1] = 1\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
