--- a/todolist.ipynb
+++ b/todolist.ipynb
@@ -76,6 +76,7 @@
     "    task.append(addTaskInput)\n",
     "    createdAt.append(str(datetime.datetime.now()))\n",
     "    status.append(\"Pending\")\n",
+    "    df.loc[]\n",
     "    return \"Task added successfully!\\n\", dataframe\n",
     "\n",
     "def editTask():\n",
